# CeresTest

./: .gitignore  BundleAdjustment.cc  CMakeLists.txt  LinePlot.cc  XY.csv  curvefitting.cc  generate_expo.py  helloworld.cc  make_circle.py  mc.csv  plotpointcloud.py  powell.cc  powell2.cc  verify_expo.py  xyz.csv
ceres/: BundleAdjSimpleRef.cc  LinePlot.cc  circle.cc  test.cc
python/: generate_expo.py  make_circle.py  plotpointcloud.py  verify_expo.py
